alpha factor example (Kelly and Atwood)

--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -115,3 +115,31 @@ doi = "10.1016/0951-8320(95)00016-U",
 url = "http://www.sciencedirect.com/science/article/pii/095183209500016U",
 author = "W.F. Werner and M. Hirano and S. Kondo and G. Johanson and J.M. Lanore and J.A. Murphy and U. Schmocker"
 }
+
+@article{2011:kelly:atwood,
+  title = {Finding a minimally informative {D}irichlet prior distribution using least squares},
+  journal = {Reliability Engineering and System Safety},
+  volume = {96},
+  number = {3},
+  pages = {398--402},
+  year = {2011},
+  issn = {0951-8320},
+  doi = {10.1016/j.ress.2010.11.008},
+  opturl = {http://www.sciencedirect.com/science/article/B6V4T-51JF82G-3/2/a13cf4d9dd6b924d7df670482d4f8dbd},
+  author = {Dana Kelly and Corwin Atwood}
+}
+
+@article{1996:atwood,
+  author = {Atwood, C. L.},
+  title = {Constrained noninformative priors in risk assessment},
+  journal = {Reliability Engineering and System Safety},
+  year = {1996},
+  optkey = {},
+  volume = {53},
+  optnumber = {},
+  pages = {37--46},
+  optmonth = {},
+  optnote = {},
+  optannote = {}
+}
+
