alpha factor elicitation

--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -70,3 +70,13 @@
   address = {London},
   year = {1991},
 }
+
+@article{1996:walley::idm,
+  author = {Peter Walley},
+  title = {Inferences from multinomial data: Learning about a bag of marbles},
+  journal = {Journal of the Royal Statistical Society, Series B},
+  year = {1996},
+  volume = {58},
+  number = {1},
+  pages = {3--34}
+}
