--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -143,3 +143,19 @@ author = "W.F. Werner and M. Hirano and S. Kondo and G. Johanson and J.M. Lanore
   optannote = {}
 }
 
+@book{1965:good,
+  author = {I. J. Good},
+  alteditor = {},
+  title = {The estimation of probabilities},
+  publisher = {MIT Press},
+  year = {1965},
+  optkey = {},
+  optvolume = {},
+  optnumber = {},
+  optseries = {},
+  address = {Cambridge (MA)},
+  optedition = {},
+  optmonth = {},
+  optnote = {},
+  optannote = {}
+}
