--- a/defs.tex
+++ b/defs.tex
@@ -23,6 +23,9 @@
 \newcommand{\uz}{^{(0)}} % upper zero
 \newcommand{\un}{^{(n)}} % upper n
 
+\newcommand{\ul}[1]{\underline{#1}}
+\newcommand{\ol}[1]{\overline{#1}}
+
 \def\yz{y\uz}
 \def\yn{y\un}
 \def\byz{\mbf{y}\uz}
