--- a/defs.tex
+++ b/defs.tex
@@ -15,7 +15,7 @@
 \renewcommand{\vec}[1]{{\bm#1}}
 
 \newcommand{\X}{\mbf{X}}
-\newcommand{\x}{\mbf{x}}
+\newcommand{\x}{\vec{x}}
 
 \newcommand{\btheta}{\bs{\theta}}
 \newcommand{\bpsi}{\bs{\psi}}
@@ -28,8 +28,8 @@
 
 \def\yz{y\uz}
 \def\yn{y\un}
-\def\byz{\mbf{y}\uz}
-\def\byn{\mbf{y}\un}
+\def\byz{\vec{y}\uz}
+\def\byn{\vec{y}\un}
 
 \def\yzl{\ul{y}\uz}
 \def\yzu{\ol{y}\uz}
