--- a/intro.tex
+++ b/intro.tex
@@ -2,16 +2,16 @@
 
 
 \begin{itemize}
-\item overview, which paper used where\ldots
+\item overview/outline, which paper used where\ldots
 \item statistical inference ??? (\textbf{StatInf chapter}, \cite{itip-statinf})
 \item Bayesian inference, conjugate priors, etc. (\textbf{TechRep Dirichlet}, \cite{Walter2012b})
-\item motivate priors etc.\ with ress paper: \cite{Walter2013a}
-\item short part on decision theory, updating rules?
-\item \pdc\ (Evans \& Moshonov), examples (\textbf{Festschrift paper}, \cite{Walter2010a})
-\item other motivations for IP?
+\item motivate priors etc.\ with ress paper: \cite{Troffaes2013a}
+\item short part on decision theory, updating rules? --- probably not
+\item \pdc\ (Evans \& Moshonov), examples (\textbf{Festschrift paper}, \cite{Walter2010a}) --- later
+\item other motivations for IP? --- later
 \end{itemize}
 
-\section{Overview}
+\section{Overview / Outline***}
 
 ***structure, which papers where***
 
@@ -28,8 +28,28 @@ Sec.~\ref{sec:norm-norm}: parts of \cite{itip-statinf}
 Sec.~\ref{sec:diri-multi}: \cite{Walter2012b}
 
 Sec.~\ref{sec:commoncause}: parts of \cite{Troffaes2013a}
+%Sec.~\ref{sec:alpha-factor-prior}: parts of \cite{Troffaes2013a}
 
-Sec.~\ref{sec:alpha-factor-prior}: parts of \cite{Troffaes2013a}
+\section{Notation}
+\label{sec:notation}
+
+scalars: italic letters ($x$, $\theta$);
+vectors: bold italic letters ($\vec{x}$, $\btheta$);
+matrices: bold ***upright*** letters ($\mbf{x}$, $\mbf{z}$)
+transposed matrices: raised uppercase sans serif T ($\mbf{x}^\tra$)
+
+samples, realizations: lowercase letters ($x$, $\x$)
+
+random variables: uppercase letters ($X$, $\vec{X}$);
+however, as this work is mostly concerned with Bayesian methods,
+the strict distrinction between random variables and `fixed' quantities as made in frequentist statistics
+is not maintained throughout most of the thesis.
+
+sets, spaces: calligraphic uppercase letters ($\mathcal{X}$, $\Y$, $\mathcal{M}$)
+
+special sets: real numbers $\reals$, 
+
+Other notational conventions are declared upon introduction of the concepts they are representing.
 
 
 \section{Statistical Inference}
